--- a/SMS_Spam_Classifier.ipynb
+++ b/SMS_Spam_Classifier.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Business Problem - Identify whether the message is spam or not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Collection - The data is collected from UCI repository, the data obtained was in tab separated format, \n",
+    "url for which is given below:\n",
+    "https://archive.ics.uci.edu/ml/datasets/sms+spam+collection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
